app_v8/redis.yml
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: kad
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: redis
  ports:
  - protocol: TCP
    port: 6379
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: kad
spec:
  selector:
    matchLabels:
      app: redis
  serviceName: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
      containers:
      - name: redis
        image: docker.io/redis
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
        ports:
        - containerPort: 6379
        livenessProbe:
          exec:
            command: ["redis-cli", "ping"]
          initialDelaySeconds: 30
          periodSeconds: 30
        readinessProbe:
          tcpSocket:
            port: 6379
          initialDelaySeconds: 1
          periodSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        volumeMounts:
        - mountPath: "/data"
          name: redis-disk
  volumeClaimTemplates:
  - metadata:
      name: redis-disk
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
