app_v8/kad.yml
---
apiVersion: v1
kind: Service
metadata:
  name: kad
  namespace: kad
spec:
  selector:
    app: kad
  ports:
  - protocol: TCP
    targetPort: 5000
    port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kad
  namespace: kad
spec:
  selector:
    matchLabels:
      app: kad
  template:
    metadata:
      labels:
        app: kad
      annotations:
        prometheus.io/scrape: "pod"
        prometheus.io/port: "5000"
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
      containers:
      - name: app
        image: tomkukral/kad
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        command: ["/bin/kad", "--color", "$(COLOR)"]
        resources:
          limits:
            cpu: 100m
            memory: 32Mi
        livenessProbe:
          httpGet:
            path: /check/live
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /check/ready
            port: 5000
          initialDelaySeconds: 1
          periodSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        lifecycle:
          postStart:
            exec:
              command: ["sh", "-c", "date > /tmp/started"]
          preStop:
            httpGet:
              path: "/action/terminate"
              port: 5001
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - all
          procMount: Default
          readOnlyRootFilesystem: true
        volumeMounts:
        - name: config
          mountPath: /etc/kad/
        - name: tmp
          mountPath: /tmp
      volumes:
      - name: tmp
        emptyDir:
          medium: Memory
      - name: config
        configMap:
          name: kad
          items:
          - key: config.yml
            path: config.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kad
  namespace: kad
spec:
  podSelector:
    matchLabels:
      app: kad
  policyTypes:
  - Ingress
  #- Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app: traefik
      podSelector:
        matchLabels:
          app: traefik
    - namespaceSelector:
        matchLabels:
          app: prometheus
    ports:
    - protocol: TCP
      port: 5000
  egress: 
  - to:
    - podSelector:
        matchLabels:
          app: redis
    ports:
    - protocol: TCP
      port: 6379
  # required by init container
  - to:
    - ipBlock:
        cidr: 1.1.1.1/32
    ports:
    - protocol: TCP
      port: 443
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - protocol: TCP
      port: 6379
  # required for DNS server
  - to:
    - ipBlock:
        cidr: 10.96.0.10/32
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
  # kubernetes api
  - to:
    - ipBlock:
        cidr: 10.96.0.1/32
    ports:
    - protocol: TCP
      port: 443
